projects/notes-app/deploy/overlays/dev/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app
  namespace: notes
spec:
  rules:
    - host: notes.172.17.93.185.nip.io
